Fully functional manual input and file input support
- Dropped scanner support